--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 :root {
   --ui-background-color: rgba(55, 190, 252, 0.61);
+  --ui-background-light: rgba(98, 192, 236, 0.164);
+
   --ui-dark-green: rgb(6, 114, 78);
   --ui-dark-shell: #363f3a;
   --ui-shadow: rgba(21, 24, 26, 0.205);
@@ -17,6 +19,7 @@
   top: 58%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
+  z-index: 1000;
 }
 
 .turtle__head {
@@ -157,12 +160,12 @@
 
 .slant1{
   transform: translate(-50%, -50%) rotate(-45deg);
-  animation: walking-turtle-01 2s ease-in-out infinite alternate;
+  animation: walking-turtle-01 1.5s ease-in-out infinite alternate;
 }
 
 .slant2 {
   transform: translate(-50%, -50%) rotate(45deg);
-  animation: walking-turtle-02 2s ease-in-out infinite alternate;
+  animation: walking-turtle-02 1.5s ease-in-out infinite alternate;
 }
 
 
@@ -258,3 +261,50 @@ html, body, #canvas {
     height: 100%;
     pointer-events: none;
   }
+
+
+
+/* ------------------------
+    RIPPLE (BACKGROUND) 
+---------------------------*/
+
+.ripple,.ripple:before,.ripple:after {
+  display:block;
+  border-radius:2px;
+  width:2px;
+  height:2px;
+  -webkit-animation:rip 6s infinite ease-out;
+}
+.ripple {
+  position:absolute;
+  z-index:-100;
+  top:40px;
+  left:15px;
+}
+.ripple:before,.ripple:after {
+  content:'';
+  position:absolute;
+}
+.ripple:before {-webkit-animation-delay:.2s;top:5px;left:25px;}
+.ripple:after {-webkit-animation-delay:.8s;top:25px;left:0;}
+@-webkit-keyframes rip 
+{
+  0%  {
+    box-shadow:0 0 0 0 transparent,
+               0 0 0 0 transparent,
+               0 0 0 0 transparent,
+               0 0 0 0 transparent;
+  }
+  15%  {
+    box-shadow:0 0 0 0 var(--ui-background-light),
+               0 0 0 0 rgba(255,255,255,0.4),
+               0 0 0 0 var(--ui-background-light),
+               0 0 0 0 rgba(0,0,0,0.08);
+  }
+  100% {
+    box-shadow:0 0 40px 200px var(--ui-background-light),
+               0 0 10px 210px transparent,
+               0 0 30px 220px var(--ui-background-light),
+               0 0 5px 230px transparent;
+  }
+}
