--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,11 @@
 }
 
 .turtle__head {
-  width: 45px;
+  width: 42px;
   height: 60px;
   border-radius: 50%;
   background-color: var(--ui-light-green);
-  position: relative;
+  position: absolute;
   top: 5%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -35,7 +35,7 @@
 /* turtle eyes */
 .turtle__head:before,
 .turtle__head:after {
-  top: 15px;
+  top: 12px;
   width: 6px;
   height: 6px;
   border-radius: 50%;
@@ -71,8 +71,8 @@
 
 
 .turtle__shadow {
-  width: 130px;
-  height: 140px;
+  width: 120px;
+  height: 130px;
   background-color: var(--ui-shadow);
   border-radius: 50%;
   overflow: hidden;
@@ -84,9 +84,9 @@
 }
 
 .turtle__head,
-.turtle__legs,
+.turtle__leg,
 .turtle__shell{
-  box-shadow: 0px 10px 10px var(--ui-shadow) ;
+  box-shadow: 0px 10px 15px var(--ui-shadow) ;
 }
 
 
@@ -140,7 +140,7 @@
 }
 
 /* turtle legs */
-.turtle__legs{
+.turtle__leg{
   width: 20px;
   height: 40px;
   border-radius: 40%;
@@ -163,12 +163,12 @@
 }
 
 
-.slant1{
+#top-l, #bot-r{
   transform: translate(-50%, -50%) rotate(-45deg);
   animation: walking-turtle-01 1.5s ease-in-out infinite alternate;
 }
 
-.slant2 {
+#top-r, #bot-l {
   transform: translate(-50%, -50%) rotate(45deg);
   animation: walking-turtle-02 1.5s ease-in-out infinite alternate;
 }
@@ -176,7 +176,7 @@
 
 @keyframes walking-turtle-01 {
   0% {
-    transform: translate(-50%, -50%) rotate(-40deg)
+    transform: translate(-50%, -60%) rotate(-40deg)
   }
 
   25% {
@@ -232,7 +232,7 @@
   }
 
   75% {
-    transform: translate(-50%, -50%) rotate(2deg)
+    transform: translate(-50%, -50%) rotate(5deg)
   }
 
   100% {
