--- a/styles.css
+++ b/styles.css
@@ -304,52 +304,11 @@ html, body, #canvas {
 /* ------------------------
     RIPPLE (BACKGROUND) 
 ---------------------------*/
-/* https://codepen.io/daless14/pen/ELFgj */
 
-.ripple,.ripple:before,.ripple:after {
-  display:block;
-  border-radius:4px;
-  width:2px;
-  height:2px;
-  -webkit-animation:rip 6s infinite ease-out;
-}
-.ripple {
-  position:absolute;
-  z-index:-100;
-  top:40px;
-  left:15px;
-}
-.ripple:before,.ripple:after {
-  content:'';
-  position:absolute;
-}
-.ripple:before {-webkit-animation-delay:.2s;top:5px;left:25px;}
-.ripple:after {-webkit-animation-delay:.8s;top:25px;left:0;}
-@-webkit-keyframes rip 
-{
-  0%  {
-    box-shadow:0 0 0 0 transparent,
-               0 0 0 0 transparent,
-               0 0 0 0 transparent,
-               0 0 0 0 transparent;
-  }
-  15%  {
-    box-shadow:0 0 0 0 var(--ui-background-light),
-               0 0 0 0 rgba(255,255,255,0.4),
-               0 0 0 0 var(--ui-background-light),
-               0 0 0 0 rgba(0,0,0,0.08);
-  }
-  100% {
-    box-shadow:0 0 40px 100px var(--ui-background-light),
-               0 0 10px 110px transparent,
-               0 0 30px 120px var(--ui-background-light),
-               0 0 5px 130px transparent;
-  }
-}
-
-
-/* second ripple*/
-.rim1, .rim2, .rim3, #cursor{
+/* ------------------------
+    RIPPLE (UNDER TURTLE) 
+---------------------------*/
+.rim1, .rim2, .rim3{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -360,16 +319,16 @@ html, body, #canvas {
   background: var(--ui-background-color);
 }
 .rim1 {
-  -webkit-animation: expand 4s linear infinite;
+  animation: expand 4s linear infinite;
 }
 .rim2 {
-  -webkit-animation: expand 4s linear 2s infinite;
+  animation: expand 4s linear 2s infinite;
 }
 .rim3 {
-  -webkit-animation: expand 4s linear 5s infinite;
+  animation: expand 4s linear 5s infinite;
 }
 
-@-webkit-keyframes expand {
+@keyframes expand {
   0% {
     top: calc(50%);
     left: calc(50% - .5em);
