--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,14 @@
   top: 58%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
+  transition: all 5x ease-in-out;
+}
+
+#pointer {
+  position: relative;
+  transform-origin: center;
+  /* display: absolute; */
+  touch-action: none;
 }
 
 .turtle__head {
@@ -87,20 +95,6 @@
 }
 .turtle__spot::after {
   right: 2px;
-}
-
-
-.turtle__shadow {
-  width: 120px;
-  height: 130px;
-  background-color: var(--ui-shadow);
-  border-radius: 50%;
-  overflow: hidden;
-  position: absolute;
-  box-shadow: 4px 4px 4px 4px var(--ui-shadow);
-  top: 60%;
-  left: 40%;
-  transform: translate(-50%, -50%);
 }
 
 .turtle__head,
@@ -308,6 +302,7 @@ html, body, #canvas {
 /* ------------------------
     RIPPLE (UNDER TURTLE) 
 ---------------------------*/
+/* credit: code modified from https://codepen.io/Kyle772/embed/xGEOQx?height=316&theme-id=0&default-tab=result */
 .rim1, .rim2, .rim3{
   position: absolute;
   top: 50%;
